--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -7,9 +7,5 @@
 
 <p>
   <b>File:</b>
-  <%= @photo.file %>
+  <img src='data:image/gif,base64,'<% puts @photo.file.to_s %>/>
 </p>
-
-
-<%= link_to 'Edit', edit_photo_path(@photo) %> |
-<%= link_to 'Back', photos_path %>
